--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -13,8 +13,9 @@
     <main>
       <div class="container">
         <a class="back-link" href="./index.html">Go back</a>
-
-        <h1>Gallery</h1>
+          <h1>Gallery</h1>
+          <ul class="gallery">
+          </ul>
       </div>
     </main>
 
