--- a/src/2-form.html
+++ b/src/2-form.html
@@ -15,6 +15,19 @@
         <a class="back-link" href="./index.html">Go back</a>
 
         <h1>Form</h1>
+        <form class="feedback-form" autocomplete="off">
+          <div class="form-box">
+          <label>
+            Email
+            <input type="email" name="email" autofocus class="input-form"/>
+          </label>
+          <label>
+            Message
+            <textarea name="message" rows="8" class="textarea-form"></textarea>
+          </label>
+          </div>
+          <button type="submit" class="btn">Submit</button>
+        </form>
       </div>
     </main>
     <script src="./js/2-form.js" type="module"></script>
